%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: EnemyController
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: SpeedXWithoutWeapon
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: SpeedZWithoutWeapon
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: JumpForwardWithoutWeapon
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: JumpUpWithoutWeapon
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: JumpBackwardWithoutWeapon
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: HasWeapon
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: SpeedXWithWeapon
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: SpeedZWithWeapon
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: JumpForwardWithWeapon
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: JumpBackwardWithWeapon
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: EnemyIsDead
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Revive
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 1107433376520646414}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &206036752871880856
BlendTree:
  m_ObjectHideFlags: 3
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: HasWeapon
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: e403abbd22724524aa81f4c44045e1ba, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedXWithoutWeapon
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 9d80d84ea52d3034e8fe89da6431ee94, type: 3}
    m_Threshold: 0.125
    m_Position: {x: -0.00039183645, y: 1.8577406}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedXWithoutWeapon
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: f3e679ca00194c14e8f03d2920449dc1, type: 3}
    m_Threshold: 0.25
    m_Position: {x: 0.0002296104, y: -1.8587477}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedXWithoutWeapon
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 03593331f55e77f4fab848f3dba6c5e1, type: 3}
    m_Threshold: 0.375
    m_Position: {x: -1.8577659, y: -0.000020140735}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedXWithoutWeapon
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 06bd50fcbfb91f9489ea3b564960842f, type: 3}
    m_Threshold: 0.5
    m_Position: {x: 1.8577576, y: -0.00028986222}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedXWithoutWeapon
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: fea3d9f89aed55c4da636278fca6f05b, type: 3}
    m_Threshold: 0.625
    m_Position: {x: -0.00045625865, y: 4.6443677}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedXWithoutWeapon
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: af6003cbcddd7154e885b5473a58fb88, type: 3}
    m_Threshold: 0.75
    m_Position: {x: 0.00047136712, y: -4.644351}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedXWithoutWeapon
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 88e2e5d668334c440a08da4a6a7e9a22, type: 3}
    m_Threshold: 0.875
    m_Position: {x: -4.6443715, y: 0.00006314553}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedXWithoutWeapon
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: d7dd56b258deafd4483c5afb7eb1d273, type: 3}
    m_Threshold: 1
    m_Position: {x: 4.6425014, y: 0.0003562093}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedXWithoutWeapon
    m_Mirror: 0
  m_BlendParameter: SpeedXWithWeapon
  m_BlendParameterY: SpeedZWithWeapon
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 2
--- !u!206 &206112140530088844
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: NoWeapon
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: dba5774a85d3af04eaf8605074d3bd99, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedX
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: b804ec0c511d1a4419ae453a86b63e2d, type: 3}
    m_Threshold: 0.14285715
    m_Position: {x: -0.0002698373, y: 1.6018375}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedX
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: bd97d2a48e41c2246a7c4187d1bc884b, type: 3}
    m_Threshold: 0.2857143
    m_Position: {x: -0.00047458336, y: -1.147596}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedX
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 3c9fbc503fb408f468d8ef9723ffdae5, type: 3}
    m_Threshold: 0.42857143
    m_Position: {x: 0.0021402494, y: 5.1142673}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedX
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 164b1a58640cc1b4993ac6556c17c9e0, type: 3}
    m_Threshold: 0.5714286
    m_Position: {x: -0.0013999563, y: -3.2458355}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedX
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: fa430a9f1360a9b4a88221651fbdcd01, type: 3}
    m_Threshold: 0.71428573
    m_Position: {x: -1.6620957, y: -0.00010770131}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedX
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 6876510943efbf5428304091bfd91583, type: 3}
    m_Threshold: 0.85714287
    m_Position: {x: 1.6620954, y: 0.00013259388}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedX
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 18a7ee7d661375d4f93f1600709c8b0f, type: 3}
    m_Threshold: 1
    m_Position: {x: -4.3393946, y: -0.0012789465}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedX
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 2d568b00f14a5d947a3ea0dd909d37ce, type: 3}
    m_Threshold: 1.1428571
    m_Position: {x: 4.3393927, y: -0.0011520386}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: SpeedX
    m_Mirror: 0
  m_BlendParameter: SpeedXWithoutWeapon
  m_BlendParameterY: SpeedZWithoutWeapon
  m_MinThreshold: 0
  m_MaxThreshold: 1.1428571
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 2
--- !u!1101 &1101109956461275026
AnimatorStateTransition:
  m_ObjectHideFlags: 3
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: JumpBackwardWithWeapon
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102716023793054544, guid: 906da7800440882419444a39a0c85827,
    type: 2}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.72107434
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &1101202696022773262
AnimatorStateTransition:
  m_ObjectHideFlags: 3
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: JumpForwardWithWeapon
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102332176031239910, guid: 906da7800440882419444a39a0c85827,
    type: 2}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.72107434
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &1101353051289766032
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Revive
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102425863727581182}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.21769905
  m_TransitionOffset: 0
  m_ExitTime: 0.91573036
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &1101442409265271134
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: EnemyIsDead
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102851308626228936}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &1101676799737323682
AnimatorStateTransition:
  m_ObjectHideFlags: 3
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: HasWeapon
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102307948858327904, guid: 906da7800440882419444a39a0c85827,
    type: 2}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.75
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &1102307948858327904
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: NoWeapon
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 206112140530088844}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &1102425863727581182
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 3
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: HasWeapon
  m_Speed: 0.7
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 206036752871880856}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &1102851308626228936
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Dead
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 1101353051289766032}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: db3291a4633d6214ebc080f94104bff0, type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1107 &1107433376520646414
AnimatorStateMachine:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 1102307948858327904}
    m_Position: {x: 312, y: 252, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 1102851308626228936}
    m_Position: {x: 240, y: 96, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 1102425863727581182}
    m_Position: {x: 240, y: 180, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions:
  - {fileID: 1101442409265271134}
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 24, y: 96, z: 0}
  m_EntryPosition: {x: 36, y: 192, z: 0}
  m_ExitPosition: {x: 492, y: 192, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 1102425863727581182}
